added application plugin