@@ -1,5 +1,6 @@
 plugins {
     id("java")
+    application
 }
 
 group = "org.lum"
@@ -14,6 +15,11 @@ dependencies {
     implementation("org.jetbrains:annotations:24.0.0")
     testImplementation(platform("org.junit:junit-bom:5.10.0"))
     testImplementation("org.junit.jupiter:junit-jupiter")
+}
+
+application {
+    mainClass = "lum.compiler.Compiler"
+    applicationDefaultJvmArgs = listOf("--enable-preview")
 }
 
 tasks.test {
